# coiote-project

./: .gitignore  CMakeLists.txt  Coiote_heuristic  Coiote_heuristic 2  Makefile  README.md  Tuner.cpp  heuristic.cpp  heuristic.h  main.cpp  solveAll.sh  tuner  utils.h
data/: results.xlsx
heuristic/: ._CoIoTeGenome.h  CoIoTeGenome.cpp  CoIoTeGenome.h
input/: ._Co_100_20_NT_1.txt  Co_100_1_NT_0.txt  Co_100_1_NT_1.txt  Co_100_1_NT_2.txt  Co_100_1_NT_3.txt  Co_100_1_NT_4.txt  Co_100_1_NT_5.txt  Co_100_1_NT_6.txt  Co_100_1_NT_7.txt  Co_100_1_NT_8.txt  Co_100_1_NT_9.txt  Co_100_1_ST_0.txt  Co_100_1_TL_0.txt  Co_100_1_TT_0.txt  Co_100_1_T_0.txt  Co_100_1_T_1.txt  Co_100_1_T_2.txt  Co_100_1_T_3.txt  Co_100_1_T_4.txt  Co_100_1_T_5.txt  Co_100_1_T_6.txt  Co_100_1_T_7.txt  Co_100_1_T_8.txt  Co_100_1_T_9.txt  Co_100_20_NT_0.txt  Co_100_20_NT_1.txt  Co_100_20_NT_2.txt  Co_100_20_NT_3.txt  Co_100_20_NT_4.txt  Co_100_20_NT_5.txt  Co_100_20_NT_6.txt  Co_100_20_NT_7.txt  Co_100_20_NT_8.txt  Co_100_20_NT_9.txt  Co_100_20_ST_0.txt  Co_100_20_TL_0.txt  Co_100_20_TT_0.txt  Co_100_20_T_0.txt  Co_100_20_T_1.txt  Co_100_20_T_2.txt  (+54 more)
output/: summary.csv  summary.numbers
solutions/: 100.txt  30 2.txt  30.txt
src/: Makefile  heuristic.cpp  heuristic.h
